--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "eventEmitter": "~4.2.11",
+    "async": "~1.2.1"
   }
 }
