--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "eventEmitter": "~4.2.11",
-    "async": "~1.2.1"
+    "async": "~1.2.1",
+    "simple-statistics": "~0.9.2"
   }
 }
