--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "~2.1.4",
     "eventEmitter": "~4.2.11",
     "async": "~1.2.1",
-    "simple-statistics": "~0.9.2"
+    "simple-statistics": "~0.9.2",
+    "c3": "~0.4.10"
   }
 }
