--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "eventEmitter": "~4.2.11",
     "async": "~1.2.1",
     "simple-statistics": "~0.9.2",
-    "c3": "~0.4.10"
+    "c3": "~0.4.10",
+    "jquery.tablesorter": "~2.22.1"
   }
 }
