--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "async": "~1.2.1",
     "simple-statistics": "~0.9.2",
     "c3": "~0.4.10",
-    "jquery.tablesorter": "~2.22.1"
+    "jquery.tablesorter": "~2.22.1",
+    "moment": "~2.10.3"
   }
 }
