--- a/bower.json
+++ b/bower.json
@@ -16,12 +16,10 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
-    "eventEmitter": "~4.2.11",
-    "async": "~1.2.1",
-    "simple-statistics": "~0.9.2",
     "c3": "~0.4.10",
-    "jquery.tablesorter": "~2.22.1",
-    "moment": "~2.10.3"
+    "jquery.tablesorter": "~2.22.1"
+  },
+  "devDependencies": {
+    "jquery": "~2.1.4"
   }
 }
