--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.10",
+    "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
