--- a/bower.json
+++ b/bower.json
@@ -17,13 +17,13 @@
   ],
   "dependencies": {
     "jquery.tablesorter": "~2.22.1",
-    "select2": "3.5.2",
     "startbootstrap-sb-admin-2": "~1.0.7",
     "jquery-pjax": "~1.9.6"
   },
   "devDependencies": {
     "c3": "~0.4.10",
     "jquery": "~2.1.4",
-    "bootstrap-sass": "~3.3.5"
+    "bootstrap-sass": "~3.3.5",
+    "moment-duration-format": "~1.3.0"
   }
 }
