--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipbx-cdr",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Statistics for Asterisk",
   "repository": {
     "type": "git",
@@ -18,11 +18,12 @@
   "homepage": "https://github.com/GeoffreyFrogeye/ipbx-cdr#readme",
   "devDependencies": {
     "async": "^1.3.0",
-    "bower": "^1.4.1",
     "browserify": "^10.2.4",
     "debowerify": "^1.3.1",
+    "fs-extra": "^0.20.1",
     "gulp": "^3.9.0",
-    "gulp-bower": "0.0.10",
+    "gulp-composer": "^0.1.0",
+    "gulp-install": "^0.4.0",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
